src/test/ui/hrtb/hrtb-higher-ranker-supertraits-transitive.stderr
error[E0277]: the trait bound `for<'ccx> B: Bar<'ccx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:47:5
   |
LL |     want_bar_for_any_ccx(b);
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `for<'ccx> Bar<'ccx>` is not implemented for `B`
   |
   = help: consider adding a `where for<'ccx> B: Bar<'ccx>` bound
note: required by `want_bar_for_any_ccx`
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:31:1
   |
LL | / fn want_bar_for_any_ccx<B>(b: &B)
LL | |     where B : for<'ccx> Bar<'ccx>
LL | | {
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
